--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Portfolio",
-    "name": "Portfolio Website",
+    "short_name": "oodball",
+    "name": "oodball",
     "icons": [
       {
         "src": "favicon.ico",
