--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "homepage": "https://oodball.com",
   "dependencies": {
+    "heic2any": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "rehype-raw": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,7 +40,5 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  },
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+  }
 }
