--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://oodball.com",
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.0",
+    "date-fns": "^4.1.0",
     "heic2any": "^0.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "^5.0.1",
     "rehype-raw": "^7.0.0"
   },
