--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "homepage": "https://oodball.com",
   "dependencies": {
-    "@supabase/supabase-js": "^2.52.0",
+    "@supabase/supabase-js": "^2.57.4",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "heic-convert": "^2.1.0",
     "heic2any": "^0.0.4",
     "react": "^19.1.0",
@@ -14,7 +17,8 @@
     "react-router-dom": "^7.7.0",
     "react-scripts": "^5.0.1",
     "rehype-raw": "^7.0.0",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "web-push": "^3.6.7"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,7 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
   }
 }
