--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,7 @@
 {
   "functions": {
-    "notification-service.js": {
+    "api/notifications/*.js": {
       "runtime": "nodejs18.x"
     }
-  },
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/notification-service.js"
-    }
-  ],
-  "env": {
-    "VAPID_PUBLIC_KEY": "BKEj54IqzhMP-3CazFJgkpc3ESbUP-zG7KXSyZvlapJGvn1_YYlX0XR5uSjjv3EGCiLBMOtRWK_zn9RTGA5pd04",
-    "VAPID_PRIVATE_KEY": "GhaWL5GVlGXOLBaaApPK07FftlxWxfnAnBdihgtbqv0",
-    "ADMIN_KEY": "foodball-admin-2025"
   }
 }
