update mobile settings

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,33 @@
 {
     "short_name": "oodball",
-    "name": "oodball",
+    "name": "oodball - Food Reviews & Gaming",
+    "description": "Follow oodball's food adventures and gaming content",
     "icons": [
       {
         "src": "favicon.ico",
         "sizes": "64x64 32x32 24x24 16x16",
         "type": "image/x-icon"
+      },
+      {
+        "src": "notification-icon-192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "any maskable"
+      },
+      {
+        "src": "notification-icon-512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "any maskable"
       }
     ],
-    "start_url": ".",
+    "start_url": "/",
     "display": "standalone",
-    "theme_color": "#000000",
-    "background_color": "#ffffff"
+    "orientation": "portrait-primary",
+    "theme_color": "#6b46c1",
+    "background_color": "#1f2937",
+    "categories": ["food", "entertainment", "lifestyle"],
+    "lang": "en-US",
+    "scope": "/",
+    "prefer_related_applications": false
   }
