--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "express": "^5.1.0",
     "heic-convert": "^2.1.0",
     "heic2any": "^0.0.4",
+    "numpy": "^0.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "rehype-raw": "^7.0.0",
     "sharp": "^0.34.3",
+    "sklearn": "^1.0.0",
     "web-push": "^3.6.7"
   },
   "scripts": {
