--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.7.0",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "rehype-raw": "^7.0.0",
     "sharp": "^0.34.3",
     "sklearn": "^1.0.0",
